--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
     "helmet": "^7.0.0",
+    "joi": "^17.10.1",
     "mongoose": "^7.5.0",
     "morgan": "^1.10.0",
     "xss-clean": "^0.1.4"
